Fix width layout on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -323,9 +323,11 @@ option {
 }
 
 .wrapper > div {
+    flex: 0 0 auto;
     display: flex;
     flex-direction: column;
     margin-left: 5px;
+    overflow: hidden;
 }
 
 .wrapper > div:first-child {
@@ -333,8 +335,9 @@ option {
 }
 
 .wrapper > div:last-child {
-    flex-grow: 1;
+    flex: 1 1 0;
     margin-right: 0;
+    overflow: auto;
 }
 
 .wrapper > div > div {
